--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -527,16 +527,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-140392.htm" title="深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略">深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-142825.htm" title="深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南">深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南</a></li>
-                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-138553.htm" title="决胜毫秒之间：F1赛事换胎策略的艺术与科学">决胜毫秒之间：F1赛事换胎策略的艺术与科学</a></li>
+                        <li class="py-2"><a href="/news/article-141112.htm" title="雪云Clash深度指南：解锁高效网络自由的终极利器">雪云Clash深度指南：解锁高效网络自由的终极利器</a></li>
+                        <li class="py-2"><a href="/news/article-139683.htm" title="解锁网络自由：Clash代理节点选购与小火箭配置终极指南">解锁网络自由：Clash代理节点选购与小火箭配置终极指南</a></li>
                         <li class="py-2"><a href="/news/article-134859.htm" title="深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南">深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
-                        <li class="py-2"><a href="/news/article-142106.htm" title="突破网络瓶颈：V2Ray网速优化的终极指南与实战技巧">突破网络瓶颈：V2Ray网速优化的终极指南与实战技巧</a></li>
-                        <li class="py-2"><a href="/news/article-133499.htm" title="突破网络限制：Clash免流设置终极指南与深度实践">突破网络限制：Clash免流设置终极指南与深度实践</a></li>
+                        <li class="py-2"><a href="/news/article-136823.htm" title="解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南">解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南</a></li>
                         <li class="py-2"><a href="/news/article-138251.htm" title="突破网络限制：V2Ray安卓版从入门到精通的完整配置指南">突破网络限制：V2Ray安卓版从入门到精通的完整配置指南</a></li>
+                        <li class="py-2"><a href="/news/article-143177.htm" title="2022年V2Ray节点每日更新完全指南：解锁稳定高速的网络自由">2022年V2Ray节点每日更新完全指南：解锁稳定高速的网络自由</a></li>
+                        <li class="py-2"><a href="/news/article-135198.htm" title="解锁Xbox游戏新境界：V2Ray代理终极优化指南">解锁Xbox游戏新境界：V2Ray代理终极优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-144617.htm" title="玩转京东农场：Quantumult X高效配置与收益最大化指南">玩转京东农场：Quantumult X高效配置与收益最大化指南</a></li>
+                        <li class="py-2"><a href="/news/article-131621.htm" title="谷歌Play科学上网全攻略：解锁全球网络自由的终极指南">谷歌Play科学上网全攻略：解锁全球网络自由的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
                     </ul>
     </div>
 </div>
@@ -548,7 +548,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
