--- a/privacy.htm
+++ b/privacy.htm
@@ -166,16 +166,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-138553.htm" title="决胜毫秒之间：F1赛事换胎策略的艺术与科学">决胜毫秒之间：F1赛事换胎策略的艺术与科学</a></li>
-                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
-                        <li class="py-2"><a href="/news/article-143177.htm" title="2022年V2Ray节点每日更新完全指南：解锁稳定高速的网络自由">2022年V2Ray节点每日更新完全指南：解锁稳定高速的网络自由</a></li>
-                        <li class="py-2"><a href="/news/article-140754.htm" title="全面解析奈油Clash X：从入门到精通的完整指南">全面解析奈油Clash X：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-134459.htm" title="Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术">Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-144617.htm" title="玩转京东农场：Quantumult X高效配置与收益最大化指南">玩转京东农场：Quantumult X高效配置与收益最大化指南</a></li>
                         <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-133499.htm" title="突破网络限制：Clash免流设置终极指南与深度实践">突破网络限制：Clash免流设置终极指南与深度实践</a></li>
-                        <li class="py-2"><a href="/news/article-138251.htm" title="突破网络限制：V2Ray安卓版从入门到精通的完整配置指南">突破网络限制：V2Ray安卓版从入门到精通的完整配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-134100.htm" title="科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南">科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南</a></li>
+                        <li class="py-2"><a href="/news/article-139331.htm" title="Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器">Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器</a></li>
+                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
                         <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
+                        <li class="py-2"><a href="/news/article-134859.htm" title="深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南">深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-132335.htm" title="从零开始掌握Clash：打造稳定免费的全局代理方案">从零开始掌握Clash：打造稳定免费的全局代理方案</a></li>
+                        <li class="py-2"><a href="/news/article-133825.htm" title="梅林路由器SSR科学上网全攻略：从安装到优化的终极指南">梅林路由器SSR科学上网全攻略：从安装到优化的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
                     </ul>
     </div>
 </div>
@@ -187,7 +187,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
