--- a/date/2025-07/index.htm
+++ b/date/2025-07/index.htm
@@ -264,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-140040.htm" title="量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能">量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能</a></li>
-                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-134100.htm" title="科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南">科学上网利器之争：V2Ray、SSR与SS的全面对比与选择指南</a></li>
-                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
-                        <li class="py-2"><a href="/news/article-136823.htm" title="解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南">解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-136112.htm" title="全面掌握GitHub Clash：从入门到精通的完整指南">全面掌握GitHub Clash：从入门到精通的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-139683.htm" title="解锁网络自由：Clash代理节点选购与小火箭配置终极指南">解锁网络自由：Clash代理节点选购与小火箭配置终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-140392.htm" title="深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略">深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-142469.htm" title="解锁网络自由：DD-WRT路由器科学上网全攻略">解锁网络自由：DD-WRT路由器科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-142825.htm" title="深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南">深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南</a></li>
+                        <li class="py-2"><a href="/news/article-145343.htm" title="全面解析v2rayng手机连接失败：从排查到解决的完整指南">全面解析v2rayng手机连接失败：从排查到解决的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-140754.htm" title="全面解析奈油Clash X：从入门到精通的完整指南">全面解析奈油Clash X：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-133499.htm" title="突破网络限制：Clash免流设置终极指南与深度实践">突破网络限制：Clash免流设置终极指南与深度实践</a></li>
+                        <li class="py-2"><a href="/news/article-139331.htm" title="Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器">Shadowrocket账号注册全攻略：从零开始掌握隐私保护利器</a></li>
+                        <li class="py-2"><a href="/news/article-142106.htm" title="突破网络瓶颈：V2Ray网速优化的终极指南与实战技巧">突破网络瓶颈：V2Ray网速优化的终极指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-143532.htm" title="安卓用户必看：CLASH节点切换全攻略与实战技巧">安卓用户必看：CLASH节点切换全攻略与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-134859.htm" title="深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南">深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-138958.htm" title="手机vmess节点完全攻略：从原理到实战的科学上网指南">手机vmess节点完全攻略：从原理到实战的科学上网指南</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +285,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
