--- a/date/2025-07/page-2.htm
+++ b/date/2025-07/page-2.htm
@@ -264,16 +264,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-140392.htm" title="深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略">深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-141748.htm" title="征服山野的利器：2022款Commencal Clash全方位深度测评">征服山野的利器：2022款Commencal Clash全方位深度测评</a></li>
-                        <li class="py-2"><a href="/news/article-132335.htm" title="从零开始掌握Clash：打造稳定免费的全局代理方案">从零开始掌握Clash：打造稳定免费的全局代理方案</a></li>
-                        <li class="py-2"><a href="/news/article-140754.htm" title="全面解析奈油Clash X：从入门到精通的完整指南">全面解析奈油Clash X：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-136823.htm" title="解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南">解锁网络自由：AC5300路由器刷梅林固件实现科学上网终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-142106.htm" title="突破网络瓶颈：V2Ray网速优化的终极指南与实战技巧">突破网络瓶颈：V2Ray网速优化的终极指南与实战技巧</a></li>
+                        <li class="py-2"><a href="/news/article-137182.htm" title="网络代理工具的多元宇宙：从Clash到V2Ray的深度探索之旅">网络代理工具的多元宇宙：从Clash到V2Ray的深度探索之旅</a></li>
+                        <li class="py-2"><a href="/news/article-142825.htm" title="深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南">深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南</a></li>
                         <li class="py-2"><a href="/news/article-135658.htm" title="第一次科学上网全攻略：从零开始解锁全球互联网">第一次科学上网全攻略：从零开始解锁全球互联网</a></li>
-                        <li class="py-2"><a href="/news/article-136467.htm" title="V2Ray突然失效？从入门到精通的全方位排错手册">V2Ray突然失效？从入门到精通的全方位排错手册</a></li>
-                        <li class="py-2"><a href="/news/article-134459.htm" title="Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术">Shadowrocket自动选择节点全攻略：智能切换与网络加速的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-135198.htm" title="解锁Xbox游戏新境界：V2Ray代理终极优化指南">解锁Xbox游戏新境界：V2Ray代理终极优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-140754.htm" title="全面解析奈油Clash X：从入门到精通的完整指南">全面解析奈油Clash X：从入门到精通的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
+                        <li class="py-2"><a href="/news/article-142469.htm" title="解锁网络自由：DD-WRT路由器科学上网全攻略">解锁网络自由：DD-WRT路由器科学上网全攻略</a></li>
                     </ul>
     </div>
 </div>
@@ -285,7 +285,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
