--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -142,16 +142,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-140392.htm" title="深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略">深度指南：Shadowrocket iOS兑换码的获取、激活与高效使用全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-142825.htm" title="深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南">深度解析：V2Ray为何在速度上完胜SSR？技术原理与实战配置全指南</a></li>
-                        <li class="py-2"><a href="/news/article-135568.htm" title="搬瓦工VPS搭建SSR失败？一文解决所有连接难题">搬瓦工VPS搭建SSR失败？一文解决所有连接难题</a></li>
-                        <li class="py-2"><a href="/news/article-131979.htm" title="深入解析vmess：从原理到实践的全面使用指南">深入解析vmess：从原理到实践的全面使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-140040.htm" title="量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能">量子ULT：解锁网络自由的全能工具——深度解析Quantumult的五大核心功能</a></li>
-                        <li class="py-2"><a href="/news/article-135198.htm" title="解锁Xbox游戏新境界：V2Ray代理终极优化指南">解锁Xbox游戏新境界：V2Ray代理终极优化指南</a></li>
+                        <li class="py-2"><a href="/news/article-131276.htm" title="解锁网络自由：电脑Clash汉化补丁全攻略与深度体验">解锁网络自由：电脑Clash汉化补丁全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-137534.htm" title="突破网络边界：86u科学上网插件的全方位使用指南与深度解析">突破网络边界：86u科学上网插件的全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-141112.htm" title="雪云Clash深度指南：解锁高效网络自由的终极利器">雪云Clash深度指南：解锁高效网络自由的终极利器</a></li>
+                        <li class="py-2"><a href="/news/article-143883.htm" title="翻墙利器Clash与免费机场全攻略：从入门到精通">翻墙利器Clash与免费机场全攻略：从入门到精通</a></li>
+                        <li class="py-2"><a href="/news/article-135658.htm" title="第一次科学上网全攻略：从零开始解锁全球互联网">第一次科学上网全攻略：从零开始解锁全球互联网</a></li>
+                        <li class="py-2"><a href="/news/article-132748.htm" title="科学上网闪退全攻略：从根源排查到完美解决方案">科学上网闪退全攻略：从根源排查到完美解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-144978.htm" title="掌握Clash配置艺术：从零开始打造高效代理环境">掌握Clash配置艺术：从零开始打造高效代理环境</a></li>
+                        <li class="py-2"><a href="/news/article-133180.htm" title="突破网络边界：路由器V2Ray Pro的全面解析与实战指南">突破网络边界：路由器V2Ray Pro的全面解析与实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-132335.htm" title="从零开始掌握Clash：打造稳定免费的全局代理方案">从零开始掌握Clash：打造稳定免费的全局代理方案</a></li>
                         <li class="py-2"><a href="/news/article-138251.htm" title="突破网络限制：V2Ray安卓版从入门到精通的完整配置指南">突破网络限制：V2Ray安卓版从入门到精通的完整配置指南</a></li>
-                        <li class="py-2"><a href="/news/article-137893.htm" title="Clash电视版全面解析：免费功能与付费服务的深度指南">Clash电视版全面解析：免费功能与付费服务的深度指南</a></li>
-                        <li class="py-2"><a href="/news/article-134859.htm" title="深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南">深度探索Shadowrocket电脑版4.9.0：从入门到精通的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-138553.htm" title="决胜毫秒之间：F1赛事换胎策略的艺术与科学">决胜毫秒之间：F1赛事换胎策略的艺术与科学</a></li>
                     </ul>
     </div>
 </div>
@@ -163,7 +163,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
